Removed GH link from RTD template

--- a/_themes/sphinx_italia_theme/breadcrumbs.html
+++ b/_themes/sphinx_italia_theme/breadcrumbs.html
@@ -24,6 +24,9 @@
 {% set display_gitlab = True %}
 {% endif %}
 
+{% set display_github = False %}
+{% set show_source = False %}
+
 <div role="navigation" aria-label="breadcrumbs navigation">
 
   <ul class="wy-breadcrumbs">
