--- a/_themes/sphinx_italia_theme/layout.html
+++ b/_themes/sphinx_italia_theme/layout.html
@@ -44,7 +44,7 @@
     </div><!--/sh__institutional-->
     <div class="sh__tabs">
     <ul class="sh__tabsul">      
-      <li class="delimiter"><a  href="https://trasformazionedigitale.italia.it">Trasformazione digitale</a></li>
+      <li class="delimiter"><a  href="https://pianotriennale-ict.italia.it">Piano Triennale ICT</a></li>
       <li class=""><a href="https://developers.italia.it/">Developers</a></li>   
       <li class="delimiter" style="opacity: 0.5;"><!--<a href="https://designers.italia.it">-->Designers<!--</a>--></li>      
       <li class=""><a href="https://forum.italia.it/">Forum</a></li>
