--- a/_themes/sphinx_italia_theme/offcanvas.html
+++ b/_themes/sphinx_italia_theme/offcanvas.html
@@ -9,7 +9,7 @@
         <ul>
             <li class="pushy-link ">
                 <span class="pushy_subtitle">IL PROGRAMMA</span>
-                <a href="https://trasformazionedigitale.italia.it">Trasformazione digitale</a>
+                <a href="https://pianotriennale-ict.italia.it">Piano Triennale ICT</a>
             </li>
             <li class="pushy-link delimiter">
                 <span class="pushy_subtitle">LE COMMUNITY</span>
