--- a/_themes/sphinx_italia_theme/layout.html
+++ b/_themes/sphinx_italia_theme/layout.html
@@ -46,7 +46,7 @@
     <ul class="sh__tabsul">      
       <li class="delimiter"><a  href="https://pianotriennale-ict.italia.it">Piano Triennale ICT</a></li>
       <li class=""><a href="https://developers.italia.it/">Developers</a></li>   
-      <li class="delimiter" style="opacity: 0.5;"><!--<a href="https://designers.italia.it">-->Designers<!--</a>--></li>      
+      <li class="delimiter"><a href="https://designers.italia.it">Designers</a></li>      
       <li class=""><a href="https://forum.italia.it/">Forum</a></li>
       <li class="current"><a href="https://docs.developers.italia.it/">Docs</a></li>
       <li class=""><a href="https://github.com/italia/">Github</a></li>
